--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,14 +1,19 @@
- {% extends 'blog/base.html' %}
+{% extends 'blog/base.html' %}
 
- {% block content %}
-    {% for post in posts %}
-                <div class="post">
-                    <div class="date">
-                        <p><b>published: {{ post.published_date }}</b></p>
-                    </div>
-                    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-                    <p><b>{{ post.text|linebreaksbr }}</b></p>
-                </div>
-            {% endfor %}
- {% endblock %}
-
+{% block content %}
+   {% for post in posts %}
+       <div class="post">
+           <div class="date">
+               {{ post.published_date }}
+           </div>
+           <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+           <p>{{ post.text|linebreaksbr }}</p><span style="background-color:yellow">Watson Says:</span>
+        <p>Anger :{{ post.angerScore }} |
+        Disgust :{{ post.disgustScore }} |
+        Fear :{{ post.fearScore }} |
+        Joy :{{ post.joyScore }} |
+        Sad :{{ post.sadScore }}</p>
+        <p>{{ post.translatedText }}</p>
+       </div>
+   {% endfor %}
+{% endblock %}
